--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>Hello World</title>
     <button id="myButton">Say hello!</button>
 </head>
+
+<script>
+    document.getElementById('myButton').addEventListener('click', function() {
+        alert('Hello!');
+    });
+</script>
 <body>
 </body>
 </html>
