--- a/index.html
+++ b/index.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello World</title>
-    <button id="myButton">Say hello!</button>
+    <link rel="stylesheet" href="styles.css">
+    <title>Say hello</title>
 </head>
-
-<script>
-    document.getElementById('myButton').addEventListener('click', function() {
-        alert('Hello!');
-    });
-</script>
 <body>
+    <div class="container">
+        <button>Say hello!</button>
+    </div>
+    <script src="events.js"></script>
 </body>
 </html>
